codegen/tests/fail/delegate/not_supported_associated_types.rs
// TODO: Remove once associated types are supported.

use delegation::delegate;

#[delegate]
trait Parser {
    type Buffer;
}

fn main() {}
