codegen/tests/fail/delegate/not_supported_associated_types.stderr
error: only trait methods with untyped receiver are allowed
 --> tests/fail/delegate/not_supported_associated_types.rs:7:5
  |
7 |     type Buffer;
  |     ^^^^
